--- a/projects/gpa-calculator.html
+++ b/projects/gpa-calculator.html
@@ -21,7 +21,7 @@
     }
 </style>
 
-<H1>GPA Calculator</H1>
+<H1>Tools</H1>
 <P>Fill in the table below to calculate your semester GPA.</P>
 <table style="width:50%" class="center">
     <tr>
