--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         P {text-align: center;}
     </style>
 
-    <H1>Projects</H1>
+    <H1>Tools</H1>
     <hr>
     <H2>GPA Calculator</H2>
     <P>Simple GPA calculator that can calculate your semester GPA.</P>
