add new website structure

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <HTML>
-<style>
-    H1 {
-        text-align: center;
-    }
 
-    H2 {
-        text-align: center;
-    }
+<head>
+    <style>
+        H1 {
+            text-align: center;
+        }
 
-    P {
-        text-align: center;
-    }
-</style>
+        H2 {
+            text-align: center;
+        }
 
-<H1>Tools</H1>
+        P {
+            text-align: center;
+        }
+    </style>
+</head>
+
+<H1>Welcome</H1>
 <hr>
-
-<H2>GPA Calculator</H2>
-<P>Simple GPA calculator that can calculate your semester GPA.</P>
-<P><a href="projects/gpa-calculator.html">Click here to use</a></P>
+<P>This is a temporary website to maintain links to some of my other projects.</P>
+<H2><a href="https://github.com/PeterTheAmazingAsian">My GitHub</a></H2>
+<br>
+<H2><a href="tools.html">Tools</a></H2>
+<br>
+<H2><a href="projects/gambling.html">Gambling</a></H2>
 
 
 </HTML>
