add basic grade calculator

--- a/tools.html
+++ b/tools.html
@@ -23,5 +23,9 @@
 <P>Simple GPA calculator that can calculate your semester GPA, made with html and javascript.</P>
 <P><a href="projects/gpa-calculator.html">Click here to use</a></P>
 
+<H2>Grade Calculator</H2>
+<P>Simple Grade calculator that can calculate your grade, made with html and javascript.</P>
+<P><a href="projects/grade-calculator.html">Click here to use</a></P>
+
 
 </HTML>
