add final grade calc

--- a/tools.html
+++ b/tools.html
@@ -19,12 +19,16 @@
 <H1>Tools</H1>
 <hr>
 
+<H2>Final Grade Calculator</H2>
+<P>Simple calculator that calculates what you need to make on your final to get a desired grade.</P>
+<P><a href="projects/gpa-calculator.html">Click here to use</a></P>
+
 <H2>GPA Calculator</H2>
-<P>Simple GPA calculator that can calculate your semester GPA, made with html and javascript.</P>
+<P>Simple GPA calculator that can calculate your semester GPA.</P>
 <P><a href="projects/gpa-calculator.html">Click here to use</a></P>
 
 <H2>Grade Calculator</H2>
-<P>Simple Grade calculator that can calculate your grade, made with html and javascript.</P>
+<P>Simple Grade calculator that can calculate your grade.</P>
 <P><a href="projects/grade-calculator.html">Click here to use</a></P>
 
 
