--- a/projects/gpa-calculator.html
+++ b/projects/gpa-calculator.html
@@ -43,7 +43,7 @@
             }
             if (hours != 0.0) {
                 const final_gpa = GPA / hours;
-                document.getElementById('gpa-text').innerHTML = "Your GPA is: " + final_gpa.toFixed(2);
+                document.getElementById("gpa-text").innerHTML = "Your GPA is: " + final_gpa.toFixed(2);
             }
         }
     </script>
@@ -94,7 +94,7 @@
     <button id="calc-btn" type="button" onclick="calcGPA()">Calculate GPA</button>
 </div>
 <div class="flex-parent jc-center">
-    <p id='gpa-text'>Your GPA is: </p>
+    <p id="gpa-text">Your GPA is: </p>
 </div>
 <table id="gpa-table" class="center">
     <tr>
@@ -103,8 +103,8 @@
         <th width="20%">Grade</th>
     </tr>
     <tr style="display:none">
-        <td contenteditable='true'></td>
-        <td contenteditable='true'></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
         <td>
             <select size="1">
                 <option value="4.33">A+</option>
@@ -124,8 +124,8 @@
         </td>
     </tr>
     <tr>
-        <td contenteditable='true'></td>
-        <td contenteditable='true'></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
         <td>
             <select size="1">
                 <option value="4.33">A+</option>
