--- a/projects/grade-calculator.html
+++ b/projects/grade-calculator.html
@@ -34,7 +34,7 @@
             for (let i = 2; i < size; i++) {
                 var grade_val = parseFloat(table.rows[i].children[2].innerHTML);
                 var weight_val = parseFloat(table.rows[i].children[1].innerHTML);
-                if (isNaN(weight_val)){
+                if (isNaN(weight_val)) {
                     //empty weight but just skip and see if other rows will make 100%
                     continue;
                 }
@@ -44,9 +44,9 @@
             }
             // make sure weights add up to 100
             let final_grade = 0.0, known_percent = 0.0, missing_percent = 0.0;
-            if (Math.abs(100 - total_weight) < Number.EPSILON){
-                for (let i = 0; i < grades.length; i++){
-                    if (isNaN(grades[i])){
+            if (Math.abs(100 - total_weight) < Number.EPSILON) {
+                for (let i = 0; i < grades.length; i++) {
+                    if (isNaN(grades[i])) {
                         missing_percent += weights[i];
                         continue;
                     }
@@ -55,17 +55,17 @@
                 }
             }
             else {
-                document.getElementById('grade-text').innerHTML = "Please make sure your weights add up to 100%.";
+                document.getElementById("grade-text").innerHTML = "Please make sure your weights add up to 100%.";
                 return;
             }
-            if (Math.abs(100 - known_percent) < Number.EPSILON){
-                document.getElementById('grade-text').innerHTML = "Your grade is: " + final_grade.toFixed(2) + "%.";
+            if (Math.abs(100 - known_percent) < Number.EPSILON) {
+                document.getElementById("grade-text").innerHTML = "Your grade is: " + final_grade.toFixed(2) + "%.";
             }
             else {
                 let cur_grade = (final_grade / known_percent) * 100
                 let max_grade = (final_grade + missing_percent);
                 let min_grade = final_grade;
-                document.getElementById('grade-text').innerHTML = "Your current known grade is: " + cur_grade.toFixed(2) + "%.<br>" + "Your minimum grade is: " + min_grade.toFixed(2) + "%.<br>" + "Your maximum grade is: " + max_grade.toFixed(2) + "%.";
+                document.getElementById("grade-text").innerHTML = "Your current known grade is: " + cur_grade.toFixed(2) + "%.<br>" + "Your minimum grade is: " + min_grade.toFixed(2) + "%.<br>" + "Your maximum grade is: " + max_grade.toFixed(2) + "%.";
             }
         }
     </script>
@@ -119,7 +119,7 @@
     <button id="calc-btn" type="button" onclick="calcGrade()">Calculate Grade</button>
 </div>
 <div class="flex-parent jc-center">
-    <p id='grade-text'>Your grade is: </p>
+    <p id="grade-text">Your grade is: </p>
 </div>
 <table id="grade-table" class="center">
     <tr>
@@ -128,14 +128,14 @@
         <th width="30%">Grade (%)</th>
     </tr>
     <tr style="display:none">
-        <td contenteditable='true'></td>
-        <td contenteditable='true'></td>
-        <td contenteditable='true'></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
     </tr>
     <tr>
-        <td contenteditable='true'></td>
-        <td contenteditable='true'></td>
-        <td contenteditable='true'></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
     </tr>
 </table>
 
