--- a/projects/final-grade-calculator.html
+++ b/projects/final-grade-calculator.html
@@ -1,7 +1,7 @@
 <HTML>
 
 <head>
-    <title>GradeCalculator</title>
+    <title>Final Grade Calculator</title>
     <script>
         function clearInput() {
             var table = document.getElementById("info-form").children;
