--- a/tools.html
+++ b/tools.html
@@ -21,7 +21,7 @@
 
 <H2>Final Grade Calculator</H2>
 <P>Simple calculator that calculates what you need to make on your final to get a desired grade.</P>
-<P><a href="projects/gpa-calculator.html">Click here to use</a></P>
+<P><a href="projects/final-grade-calculator.html">Click here to use</a></P>
 
 <H2>GPA Calculator</H2>
 <P>Simple GPA calculator that can calculate your semester GPA.</P>
