--- a/projects/gambling.html
+++ b/projects/gambling.html
@@ -13,17 +13,21 @@
                 return;
             }
             if (bet_amt <= cur_bal) {
-                let roll = Math.floor(Math.random() * 100);
-                if (roll < 35){
-                    bet_amt *= 2;
+                const rand_arr = new Uint32Array(1);
+                window.crypto.getRandomValues(rand_arr);
+                let rand_num = rand_arr[0] / (0xffffffff + 1);
+                let roll = Math.floor(rand_num * (2));
+                console.log(roll);
+                if (roll == 0){
+                    bet_amt *= 1.9;
                     cur_bal += bet_amt;
                     res_text.innerHTML = "You won $" + (bet_amt).toFixed(2) + "!"
-                    bal_text.innerHTML = cur_bal;
+                    bal_text.innerHTML = cur_bal.toFixed(2);
                 }
                 else {
                     cur_bal -= bet_amt;
                     res_text.innerHTML = "You lost $" + (bet_amt).toFixed(2) + "."
-                    bal_text.innerHTML = cur_bal;
+                    bal_text.innerHTML = cur_bal.toFixed(2);
                 }
             }
             else {
