--- a/projects/gambling.html
+++ b/projects/gambling.html
@@ -8,7 +8,7 @@
             var res_text = document.getElementById("result-text");
             let cur_bal = parseFloat(bal_text.innerHTML);
             let bet_amt = parseFloat(table[2].value);
-            if (isNaN(bet_amt) || bet_amt < 0){
+            if (isNaN(bet_amt) || bet_amt <= 0){
                 res_text.innerHTML = "Please enter valid bet amount."
                 return;
             }
@@ -16,10 +16,10 @@
                 const rand_arr = new Uint32Array(1);
                 window.crypto.getRandomValues(rand_arr);
                 let rand_num = rand_arr[0] / (0xffffffff + 1);
-                let roll = Math.floor(rand_num * (2));
+                let roll = Math.floor(rand_num * (100 - 1 + 1)) + 1;
                 console.log(roll);
-                if (roll == 0){
-                    bet_amt *= 1.9;
+                if (roll <= 40){
+                    bet_amt *= 2;
                     cur_bal += bet_amt;
                     res_text.innerHTML = "You won $" + (bet_amt).toFixed(2) + "!"
                     bal_text.innerHTML = cur_bal.toFixed(2);
