add comments in html

--- a/projects/final-grade-calculator.html
+++ b/projects/final-grade-calculator.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Final Grade Calculator</title>
+    <!-- Please don't break me I was made in like 5 minutes. -->
     <script>
         function clearInput() {
             var table = document.getElementById("info-form").children;
