--- a/projects/grade-calculator.html
+++ b/projects/grade-calculator.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Grade Calculator</title>
+    <!-- Please don't break me I was made in like 5 minutes. -->
     <script>
         function addRow() {
             var table = document.getElementById("grade-table");
