--- a/projects/gpa-calculator.html
+++ b/projects/gpa-calculator.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>GPA Calculator</title>
+    <!-- Please don't break me I was made in like 5 minutes. -->
     <script>
         function addRow() {
             var table = document.getElementById("gpa-table");
