--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Peter Zhang - Software Engineer</title>
     <meta
       name="description"
-      content="Peter Zhang - Software Engineer passionate about building innovative solutions and sharing knowledge through code and literature."
+      content="Peter Zhang - Software Engineer passionate about building innovative, scalable solutions and amplifying engineering productivity across the organization."
     />
     <link rel="stylesheet" href="styles.css" />
     <link
