--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peter Zhang - OS Portfolio</title>
-    <meta name="description" content="Peter Zhang - Senior Software Engineer Portfolio">
+    <title>Peter Zhang | Software Engineer</title>
+    <meta name="description" content="Peter Zhang - Senior Software Engineer | Data & AI">
     <link href="./styles.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
